php-src/ext/standard/tests/serialize/bug71311.out
Failed loading /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so:  /opt/php-7.1/lib/php/extensions/debug-non-zts-20160303/xdebug.so: cannot open shared object file: No such file or directory

Fatal error: Uncaught UnexpectedValueException: Error at offset 10 of 11 bytes in /root/php-src/ext/standard/tests/serialize/bug71311.php:2
Stack trace:
#0 [internal function]: ArrayObject->unserialize('x:i:0;r:3;X')
#1 /root/php-src/ext/standard/tests/serialize/bug71311.php(2): unserialize('C:11:"ArrayObje...')
#2 {main}
  thrown in /root/php-src/ext/standard/tests/serialize/bug71311.php on line 2