php-src/ext/standard/tests/serialize/bug71311.php
<?php
$data = unserialize("C:11:\"ArrayObject\":11:{x:i:0;r:3;X}");
var_dump($data);
?>
